# Symbolic-Distillation-of-Neural-Networks

./: .gitignore  Instructions.md  README.md  environment_project.yml  license  plotting.ipynb  pyproject.toml  training_loss.csv  training_loss_kl.csv
docs/source/: conf.py  index.rst
model_weights/: charge_bottleneck.pth  charge_kl.pth  charge_l1.pth  charge_standard.pth  r1_bottleneck.pth  r1_kl.pth  r1_l1.pth  r1_standard.pth  r2_bottleneck.pth  r2_kl.pth  r2_l1.pth  r2_standard.pth  spring_bottleneck.pth  spring_kl.pth  spring_l1.pth  spring_standard.pth
src/: charge.ipynb  message_processing.py  models.py  r1.ipynb  r2.ipynb  spring.ipynb
src/outputs/20250626_002238_h9hoxW/: checkpoint.pkl  hall_of_fame.csv
src/outputs/20250626_002328_DnS0BL/: checkpoint.pkl  hall_of_fame.csv
src/outputs/20250626_002534_VKpz5a/: checkpoint.pkl  hall_of_fame.csv.bak
src/outputs/20250626_024647_M79CPm/: checkpoint.pkl  hall_of_fame.csv.bak
src/outputs/charge-bottleneck/: checkpoint.pkl  hall_of_fame.csv  hall_of_fame.csv.bak
src/outputs/charge-kl/: checkpoint.pkl  hall_of_fame.csv
src/outputs/charge-l1/: checkpoint.pkl  hall_of_fame.csv.bak
src/outputs/charge-standard/: checkpoint.pkl  hall_of_fame.csv.bak
src/outputs/r1-bottleneck/: checkpoint.pkl  hall_of_fame.csv
src/outputs/r1-bottleneck-ex2/: checkpoint.pkl  hall_of_fame.csv.bak
src/outputs/r1-kl/: checkpoint.pkl  hall_of_fame.csv.bak
src/outputs/r1-l1/: checkpoint.pkl  hall_of_fame.csv  hall_of_fame.csv.bak
src/outputs/r1-standard/: checkpoint.pkl  hall_of_fame.csv  (+1 more)
src/wandb/: latest-run
(+63 files in other folders)
